--- a/src/scss/components/home/ExperienceCardsList.scss
+++ b/src/scss/components/home/ExperienceCardsList.scss
@@ -5,7 +5,6 @@
     margin: 0;
     padding: 0;
     list-style: none;
-
 }
 
 .card-year {
@@ -16,7 +15,12 @@
     letter-spacing: .3px;
 }
 
+.card-desc {}
+
 .card-title {
+    height: 50px;
+    padding: 0;
+    margin: 0;
     color: rgb(198, 198, 198);
     font-size: 1em;
     font-weight: 500;
